<resources>
    <string name="app_name">Mascotas</string>
    <string name="app_name_black"></string>
    <string name="titulo">Mascotas</string>
    <string name="logo">Logo</string>
    <string name="start">Top 5</string>
    <string name="nombre_mascota">Cheto</string>
    <string name="rating">7</string>
    <string name="menu_top_mascotas">Top 5</string>
    <string name="menu_contacto">Contacto</string>
    <string name="menu_acerca_de">Acerca de</string>
    <string name="acerda_de">Aplicación de Mascotas usando Fragments, RecyclerView y Mail</string>
    <string name="form_nombre">Ingrese su Nombre </string>
    <string name="form_correo">Ingrese su Email</string>
    <string name="form_comentario">Ingrese un Comentario</string>
    <string name="name_dummy">Doggi</string>
    <string name="btn_enviar">Enviar Comentario</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>