<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!--<item android:id="@+id/patita"
        android:title="@string/app_name"
        app:showAsAction="always"
        android:orderInCategory="0"
        android:icon="@drawable/patita_9"
        />-->
    <!--<item android:id="@+id/titulo"
        android:title="@string/app_name"
        android:titleCondensed="@string/app_name"
        app:showAsAction="always"
        android:orderInCategory="2"
        />-->
    <item android:id="@+id/menuTopFavoritos"
    android:title="@string/menu_top_mascotas"
        android:icon="@drawable/ic_star_9"
        app:showAsAction="always"
        android:orderInCategory="10"
        />
    <item android:id="@+id/menuContacto"
        android:title="@string/menu_contacto"/>
    <item android:id="@+id/menuAcercaDe"
        android:title="@string/menu_acerca_de" />
</menu>