<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.Contacto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/etNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/form_nombre"/>

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/form_correo"
            android:layout_below="@+id/etNombre"/>

        <EditText
            android:id="@+id/etComentario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/form_comentario"
            android:layout_below="@+id/etEmail"/>

        <Button
            android:id="@+id/btnEnviarComentario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_enviar"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/card_top"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_below="@+id/etComentario"/>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>