<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.TopMascotas">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <include
            android:id="@+id/miActionBar"
            layout="@layout/actionbar" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60sp"
            android:orientation="horizontal"
            android:elevation="@dimen/elevacion_actionbar">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="@dimen/logon"
                android:layout_height="41dp"
                android:contentDescription="@string/logo"
                android:src="@drawable/patita_9"
                android:onClick="regresar"
                android:layout_gravity="center_vertical"/>

            <TextView
                android:id="@+id/tvTitulo"
                android:layout_width="227dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:text="@string/titulo"
                android:textColor="@color/white"
                android:textSize="@dimen/titulo"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/topMascotas"
                android:layout_width="86dp"
                android:layout_height="43dp"
                android:layout_gravity="center"
                android:contentDescription="@string/start"
                android:src="@drawable/ic_star_9"/>
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/myRv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/miActionBar" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>